kubernetes/excalidraw/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw
  namespace: excalidraw
  labels:
    app: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw
  template:
    metadata:
      labels:
        app: excalidraw
    spec:
      containers:
      - name: excalidraw
        image: excalidraw/excalidraw:latest
        ports:
        - containerPort: 80
          name: excalidraw
