kubernetes/excalidraw/service.yml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  selector:
    app: excalidraw
  ports:
  - name: http
    targetPort: 80
    port: 80
