kubernetes/excalidraw/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: excalidraw
  namespace: excalidraw
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.excalidraw.your-domain.com`)  # change to your domain
      kind: Rule
      services:
        - name: excalidraw
          port: 80
    - match: Host(`excalidraw.your-domain.com`)  # change to your domain
      kind: Rule
      services:
        - name: excalidraw
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: tls  # change to your cert name
